# package-version

./: .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  hie.yaml  package-version.cabal  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-1.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2.yaml  haddock_ci.yaml  nix.yaml  nix_ci.yaml  stack.yaml  stack_ci.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style.yaml  style_ci.yaml
ci_scripts/: cabal-fmt.sh  ormolu.sh
docs/: Data-Version-Package-Internal.html  Data-Version-Package.html  doc-index.html  index.html  package-version.haddock
docs/src/: Data.Version.Package.Internal.html  Data.Version.Package.html
nix/: ci.nix  ghc_8-10-7.nix  ghc_9-0-1.nix  ghc_base.nix  stack.nix  stack_base.nix
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh  ormolu_inplace.sh
src/Data/Version/: Package.hs
src/Data/Version/Package/: Internal.hs
src/Package/: Version.hs
test/doctest/: Main.hs
test/props/: Gens.hs  Main.hs
test/props/Props/: Text.hs  Version.hs
test/props/Tests/: ListInt.hs  Text.hs  Version.hs
test/unit/: Gens.hs  Main.hs
test/unit/Tests/: IO.hs  TH.hs
test/unit/Unit/Data/Version/: Package.hs
tools/: doctest.sh  haddock.sh
