cabal-version:      2.4
name:               package-version
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/package-version/
bug-reports:        https://github.com/tbidne/package-version/issues
synopsis:           A program for retrieving a package's version number.
description:
  @package-version@ reads the package version number from a cabal file.
  This version number can be retrieved at compile-time via @TemplateHaskell@
  or runtime via ordinary functions.

category:           System
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/package-version

library
  exposed-modules:  Package.Version
  build-depends:
    , attoparsec        >=0.13.2.3 && <0.15
    , base              ^>=4.14.1.0
    , safe-exceptions   ^>=0.1.7.0
    , template-haskell  >=2.16.0.0 && <2.18
    , text              ^>=1.2.3.2

  hs-source-dirs:   src
  default-language: Haskell2010
